Fix T44759: Blender has problems reading and writing 42k images to PNG